; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_planner.c_involves_ts_hypertable_relid.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_planner.c_involves_ts_hypertable_relid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64)* @involves_ts_hypertable_relid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @involves_ts_hypertable_relid(i32* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %14

9:                                                ; preds = %2
  %10 = load i64, i64* %5, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @planner_rt_fetch(i64 %10, i32* %11)
  %13 = call i32 @is_rte_hypertable(i32 %12)
  store i32 %13, i32* %3, align 4
  br label %14

14:                                               ; preds = %9, %8
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @is_rte_hypertable(i32) #1

declare dso_local i32 @planner_rt_fetch(i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
